# devkit

./: .clang-format  .clangd  .gitignore  .gitmodules  .gn  BUILD.gn  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
cmake/modules/: OutputPathConfig.cmake  global.cmake  msvc.cmake  msvc_methods.cmake
include/: cvpp.h  inspection.h  interface.h  libuiohook.h  log.hpp  macros.h  opencv.h  panda.h  panda_1.h  quickfix.h  rapidjson.h  rapidxml.h  shared_library.h  sk.h  skpp.h  stl.h  win.h  win32.h  winautomation.h  winoverlay.h  wxui.h
include/win32/: macro.h
libs/vs/x64/Debug/: stl.idb
projects/: CMakeLists.txt
projects/curl/: BUILD.gn  curl.cc  curl.h  stdafx.h
projects/fix/: Application.cc  Application.h  BUILD.gn  fix.cc  fix.h  sessionsettings.cc  sessionsettings.h  stdafx.h
projects/icu/: BUILD.gn  icu.cc  icu.h  stdafx.h
projects/inspection/: BUILD.gn  CMakeLists.txt  inspect.cc  inspect.h  stdafx.h
projects/inspection/automation/: BUILD.gn  CMakeLists.txt  automation.cc  automation.h  automation_focus_changed_event.cc  automation_focus_changed_event.h  config.cc  config.h  element.cc  element.h  element_array.cc  element_array.h  focus_changed_event.cc  focus_changed_event.h  resource.rc  stdafx.h
projects/inspection/capture/: BUILD.gn  CMakeLists.txt  capture.cc  capture.h  capture.vcxproj  core.cpp  core.h  global.h  main.cpp  object.cpp  object.h  pyd.cpp  pyd.h  pyd_ext.cpp  stdafx.h
projects/inspection/cvpp/: CMakeLists_.txt  cvpp.cpp  dllmain.cpp  overlay.cpp  range.cpp  range.h  stdafx.h  stream.h
projects/inspection/include/: inspection.h
projects/inspection/input/: CMakeLists.txt  event.h  hook.cc  stdafx.h
projects/inspection/inspect/: BUILD.gn  config.cc  config.h  element.cc  element.h  inspect.cc  inspect.h  stdafx.h
projects/inspection/opencv/: cv.cc  cv.h
projects/inspection/overlay/: BUILD.gn  CMakeLists.txt  app.manifest  config.cc  config.h  overlay.cc  overlay.h  resource.rc  stdafx.h  stream.cc  stream.h  window.cc  window.h  window_bk.cc  window_bk.h  window_cv.cc  window_cv.h  window_ele.cc  window_ele.h  window_ui.cc  window_ui.h
projects/inspection/perform/: BUILD.gn  CMakeLists.txt  compile_flags.txt  main.cc  stdafx.h  tools.cc  tools.h
projects/inspection/uiohook/: BUILD.gn  event.cc  event.h  hook.cc  hook.h  stdafx.h
projects/opencv/: BUILD.gn  stdafx.h
projects/opencv_win32/: .gitignore  opencv_win32.sln
projects/opencv_win32/cvpp/: cvpp.cpp  cvpp.h  cvpp.vcxproj  deps.h  dllmain.cpp  stdafx.h
projects/opencv_win32/tests/: main.cpp  tests.vcxproj
projects/ossl/: BUILD.gn  CMakeLists.txt  ossl.cc  stdafx.h
projects/panda/: BUILD.gn  bext.cc  bext.h  bf.cc  bf.h  local.c  pd.cc  pd.h  stdafx.h  version.h
projects/panda/linux/: core.c  flock.c  linux.h  main.c  tlock.c
projects/panda/win/: file.c  flock.c  main.c  win.h
projects/panda_1/: BUILD.gn  pd.cc  pd.h  stdafx.h
projects/sk/: BUILD.gn  comm.c  comp.c  compress.cc  icu.c  local.h  loop.c  ossl.c  skerr.h  stdafx.h  uv.c
projects/sk/linux/: file.c
projects/sk/win/: core.c  tlock.c
projects/stl/: BUILD.gn  CMakeLists.txt  directory.cc  file.cc  path.cc  stdafx.h  string.cc  time.cc
projects/uiohook/: BUILD.gn  event.cc  event.h  hook.cc  hook.h  stdafx.h
projects/win32/: CMakeLists.txt  file.cpp  process.cpp
projects/win32/include/: iconv.h  mmapfile.h  win.hpp  win32.hpp
projects/win32/src/: encryption.cpp  registry.cpp  stdafx.h  tcpip.cpp  win.cpp  win32.cc  window.cpp
projects/win32vs/: .gitignore  build.sln
projects/win32vs/capture/: capture.vcxproj  core.cpp  core.h  dllmain.cpp  global.cpp  global.h  main.cpp  pyd.cpp  pyd.h  pyd_ext.cpp  stdafx.h  types.h
projects/win32vs/cvpp/: cvpp.cpp  cvpp.h  cvpp.vcxproj  deps.h  overlay.h  stream.cpp
projects/win32vs/tests/: main.cpp  test.h  test_cv.cpp  test_pyd.cpp  test_win32.cpp  tests.vcxproj
projects/winautomation/: BUILD.gn  automation.cc  automation.h  element.cc  element.h  stdafx.h
projects/winoverlay/: BUILD.gn  overlay.cc  overlay.h  stdafx.h
projects/wxui/: BUILD.gn  base.cc  base.h  stdafx.h  ui.cc  ui.h  wx.h  wxui.h
store/: FIX.4.0-EXECUTOR-CLIENT2.session  FIX.4.1-EXECUTOR-CLIENT2.session  FIX.4.2-EXECUTOR-CLIENT2.session  FIX.4.3-EXECUTOR-CLIENT1.session  FIX.4.3-EXECUTOR-CLIENT2.session  FIX.4.4-EXECUTOR-CLIENT1.session  FIX.4.4-EXECUTOR-CLIENT2.session  FIXT.1.1-EXECUTOR-CLIENT2.session
tests/: BUILD.gn  CMakeLists.txt
tests/rpa/: test_pyd.py
tests/test_curl/: BUILD.gn  main.cc  stdafx.h
tests/test_fix/: BUILD.gn  main.cc  stdafx.h
tests/test_inspection/: BUILD.gn  CMakeLists.txt  main.cc  stdafx.h
tests/test_ossl/: CMakeLists.txt  main.cc
tests/test_overlay/: BUILD.gn  main.cc  stdafx.h
tests/test_panda/: BUILD.gn  icu.cc  main.cc  stdafx.h  tests.h
tests/test_panda_1/: stdafx.h
tests/test_sk/: BUILD.gn  autobot.html  autobot.json  chromium.cc  chromium.h  comp.cc  ddd.js  ddd_template.js  demoui.html  fps.cc  fps.h  fps_injector.js  fps_template.js  game.jsonnet  main.cc  ossl.cc  skfps.cc  skfps.h  skfps.js  stdafx.h  test.jsonnet  test.py  test_uv.cc  tests.h
tests/test_uiohook/: CMakeLists.txt  main.cc
tests/test_win32/: CMakeLists.txt  main.cc  stdafx.h
tests/test_wx/: BUILD.gn  main.cc  stdafx.h
