build_3rdparty = true

group("build_all") {
  if (build_3rdparty) {
    deps = [
      #"//build/3rdparty/fmt:fmt",
      #"//build/3rdparty/libuv:libuv",
      #"//build/3rdparty/icu:icu",
      #"//build/3rdparty/openssl:openssl",
      #"//build/3rdparty/zlib:zlib",
      #"//build/3rdparty/curl:curl",
      "//build/3rdparty/wxwidgets:wxwidgets",
    ]
  } else {
    deps = [
      #"//projects:projects_group",
      "//tests:tests_group",
    ]
  }
}
