build_3rdparty = false

group("build_all") {
  if (build_3rdparty) {
    deps = [
      "//build/3rdparty/fmt:fmt",
      "//build/3rdparty/icu:icu",
      "//build/3rdparty/libuiohook:libuiohook",
      "//build/3rdparty/libuv:libuv",
      "//build/3rdparty/opencv:opencv",
      "//build/3rdparty/openssl:openssl",
      "//build/3rdparty/yaml-cpp:yaml-cpp",
      "//build/3rdparty/zlib:zlib",
      "//build/3rdparty/zstd:zstd",

      #==========================================================
      # Only MSVC tool chain is supported on WINDOWS platform
      #"//build/3rdparty/cjson:cjson",
      #"//build/3rdparty/curl:curl",
      #"//build/3rdparty/quickfix:quickfix",
      #"//build/3rdparty/wxwidgets:wxwidgets",
    ]
  } else {
    deps = [
      #"//projects:projects_group",
      #"//projects/inspection/capture:capture",
      "//tests:tests_group",
    ]
  }
}
