source_set("source_fix") {
  sources = [ "fix.cc" ]

  public_configs = [ "//build/deps:quickfix" ]
  defines = [ "SHARED_IMPLEMENTATION" ]
}
if (enable_static_library_wxui) {
  static_library("fix") {
    deps = [
      ":source_fix",
      "//projects/stl:stl",
    ]
  }
} else {
  shared_library("fix") {
    deps = [ ":source_fix" ]
  }
}
