source_set("source_fix") {
  sources = [
    "Application.cc",
    "fix.cc",
  ]

  public_configs = [ "//build/deps:quickfix" ]
  defines = [
    "SHARED_IMPLEMENTATION",
    "HAVE_SSL=1",
  ]
  deps = [ "//projects/stl:stl" ]
}
if (enable_static_library_wxui) {
  static_library("fix") {
    deps = [ ":source_fix" ]
  }
} else {
  shared_library("fix") {
    deps = [ ":source_fix" ]
  }
}
