source_set("source_fix") {
  sources = [
    "application.cc",
    "fix.cc",
    "sessionsettings.cc",
  ]

  public_configs = [
    "//build/deps:quickfix",
    "//build/deps:openssl",
  ]
  defines = [ "SHARED_IMPLEMENTATION" ]
  deps = [ "//projects/stl:stl" ]
}
if (enable_static_library_wxui) {
  static_library("fix") {
    deps = [ ":source_fix" ]
  }
} else {
  shared_library("fix") {
    deps = [ ":source_fix" ]
  }
}
