source_set("source_uiohook") {
  sources = [ "hook.cc" ]

  public_configs = [
    "//build/deps:openssl",
    "//build/deps:zlib",
    "//build/deps:libuiohook",
  ]
  defines = [ "SHARED_IMPLEMENTATION" ]
  deps = [ "//projects/stl:stl" ]
}
shared_library("uiohook") {
  deps = [ ":source_uiohook" ]
}
