source_set("source_capture") {
  sources = [
    "capture.cc",
    "capture.h",
    "stdafx.h",
  ]
  include_dirs = [ "//projects/inspection/include" ]
  public_configs = [
    "//build/deps:zlib",
    "//build/deps:fmt",
    "//build/deps:python311",
  ]
  defines = [
    "SHARED_IMPLEMENTATION",
    "PY_SSIZE_T_CLEAN",
  ]
  deps = [
    #"//projects/opencv:opencv",
    #"//projects/inspection/automation:automation",
    #"//projects/inspection/overlay:overlay",
    #"//projects/inspection/uiohook:uiohook",
    #"//projects/sk:sk",
    "//projects/stl:stl",
  ]
}
shared_library("capture") {
  deps = [ ":source_capture" ]
}
