source_set("source_uiohook") {
  sources = [
    "event.cc",
    "event.h",
    "hook.cc",
    "hook.h",
  ]

  public_configs = [
    "//build/deps:libuiohook",
    "//build/deps:fmt",
  ]
  defines = [ "SHARED_IMPLEMENTATION" ]
  deps = [ "//projects/stl:stl" ]
}
shared_library("uiohook") {
  deps = [ ":source_uiohook" ]
}
